# jit-compiler

./: .gitignore  CMakeLists.txt  README.md
cmake/: Infrastructure.cmake
examples/: CalcWeightOfBlock.pl  SomeRandomProgram.pl  Test.pl
pljit/: CMakeLists.txt  FunctionHandleFwd.h  Pljit.cpp  Pljit.h
pljit/analysis/: SemanticAnalysis.cpp  SemanticAnalysis.h  SymbolTable.cpp  SymbolTable.h  SymbolTableFwd.h
pljit/ast/: AST.cpp  AST.h  ASTDotVisitor.cpp  ASTDotVisitor.h  ASTFwd.h  ASTVisitor.h
pljit/common/: References.cpp  References.h  ReferencesFwd.h  SourceCodeManager.cpp  SourceCodeManager.h  SourceCodeManagerFwd.h
pljit/exec/: ExecutionContext.cpp  ExecutionContext.h  ExecutionContextFwd.h
pljit/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
pljit/optim/: ConstantPropagation.cpp  ConstantPropagation.h  DeadCodeElimination.cpp  DeadCodeElimination.h  OptimizationPass.h
pljit/parse_tree/: ParseTree.cpp  ParseTree.h  ParseTreeDotVisitor.cpp  ParseTreeDotVisitor.h  ParseTreeFwd.h  ParseTreeVisitor.h  ParseTreeVisitorFwd.h
pljit/parser/: Parser.cpp  Parser.h
scripts/: CMakeLists.txt  PLDotInspection.cpp
test/: CMakeLists.txt
test/pljit/: TestASTDotVisitor.cpp  TestASTExecution.cpp  TestConstantPropagation.cpp  TestDeadCodeElimination.cpp  TestLexer.cpp  TestParseTreeDotVisitor.cpp  TestParser.cpp  TestParserErrors.cpp  TestPljit.cpp  TestSemanticAnalysis.cpp
test/utils/: TestUtils.cpp  TestUtils.h
